# -Django

./: pyproject.toml
src/: categories.html  contacts.html  main.py  main_page.html  orders.html
